<resources>
    <string name="app_name">Record Kepper</string>
    <string name="running">Running</string>
    <string name="cycling">Cycling</string>
    <string name="running_image_description">Running Image</string>
    <string name="_5km">5km</string>
    <string name="half_marathon">Half Marathon</string>
    <string name="_10km">10km</string>
    <string name="marathon">Marathon</string>
    <string name="cycling_image">Cycling_Image</string>
    <string name="longest_ride">Longest Ride</string>
    <string name="best_average_speed">Best Average Speed</string>
    <string name="biggest_climb">Biggest Climb</string>
    <string name="reset_running_records">Reset Running Records</string>
    <string name="reset_cycling_records">Reset Cycling Records</string>
    <string name="reset_all_records">Reset All Records</string>
    <string name="record">Record</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="_15th_january_2023">15th January 2023</string>
    <string name="clear_record">Clear Record</string>
</resources>