<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/frame_heading"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="200dp">

            <ImageView
                android:src="@drawable/running_heading"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/running_image_description" />

            <View
                android:background="@drawable/gradient_overlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <TextView
                android:textSize="24sp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/running"
                android:layout_gravity="bottom"
                android:gravity="center"/>
        </FrameLayout>

        <LinearLayout
            android:padding="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/frame_heading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_5km"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_view_5km_heading"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5km"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif"
                    android:textColor="?attr/colorPrimary"
                    />
                <TextView
                    android:id="@+id/text_view_5km_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="22:04"
                    android:fontFamily="sans-serif-light"
                    android:textSize="20sp"
                    android:textColor="@color/dark_grey"/>
                <TextView
                    android:id="@+id/text_value_5km_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/text_view_5km_value"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="29/1/2020"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-light"
                    android:textSize="16sp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/light_grey"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_10km"
                android:padding="12dp"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_view_10km_heading"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_10km"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif"
                    android:textColor="?attr/colorPrimary"
                    />
                <TextView
                    android:id="@+id/text_view_10km_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="22:04"
                    android:fontFamily="sans-serif-light"
                    android:textSize="20sp"
                    android:textColor="@color/dark_grey"/>
                <TextView
                    android:id="@+id/text_value_10km_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/text_view_10km_value"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="29/1/2020"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-light"
                    android:textSize="16sp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/light_grey"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_half_marathon"
                android:padding="12dp"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_view_half_marathon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/half_marathon"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif"
                    android:textColor="?attr/colorPrimary"
                    />
                <TextView
                    android:id="@+id/text_view_half_marathon_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="22:04"
                    android:fontFamily="sans-serif-light"
                    android:textSize="20sp"
                    android:textColor="@color/dark_grey"/>
                <TextView
                    android:id="@+id/text_value_half_marathon_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/text_view_half_marathon_value"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="29/1/2020"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-light"
                    android:textSize="16sp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/light_grey"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_marathon"
                android:padding="12dp"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_view_marathon_heading"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marathon"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif"
                    android:textColor="?attr/colorPrimary"
                    />
                <TextView
                    android:id="@+id/text_view_marathon_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="22:04"
                    android:fontFamily="sans-serif-light"
                    android:textSize="20sp"
                    android:textColor="@color/dark_grey"/>
                <TextView
                    android:id="@+id/text_value_marathon_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/text_view_marathon_value"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="29/1/2020"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-light"
                    android:textSize="16sp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/light_grey"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>